--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -31,18 +31,79 @@ author: wangyifan
 
 所以，如果你的内容本来就是错误的、空洞的，演讲得再动听都没用！就好比是以前很流行的电视广告，无论什么东西，推广人员都能说得天花乱坠，例如就一个晾衣架，用户都能被说得心潮澎湃的，这就是推广人员的技巧！但是如果用户最后买回来发现是个垃圾(没有内容)，最终用户是不会买帐的！最终结果不是退货，就是用户再也不会买该公司的产品了！而且后面这个推广人员再怎么口若悬河，大家也只会嗤之以鼻！
 
-那如何来获取内容呢？**无它，唯积累尔！**
+那如何来获取内容呢？**无它，唯积累尔!**
 
 例如，在工作中遇到的问题，你总结归纳出一套有效的解决方法！你实现了一套工具，能有效的提高工作效率！对某个新领域，别人都不太了解，就你知道！等等等等，这些都是可以分享的内容！
 
+
 ## 了解听众
 
+了解听众可以从两个层面来说：
+
+- 听众的层级
+- 听众的诉求
+
+## 听众的层级
+
+首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的
+
+不同层级，描述方式与着重点不同
+
+举例：韦小宝
+
+如何确认听众层级？
+
+## 听众的诉求
+
+听众的目的
+换位思考听众的困境
+保持简单-》类比
+
 你的听众不是你的敌人。
+
 既然已经决定投入时间坐在下面听你讲话，你的听众最不希望你惊慌、紧张、手足无措、语无伦次……他们最希望跟你一起度过愉悦的这段时光。听众的这种愿望，跟你一样强烈，正如你当然也不希望自己惊慌、紧张、手足无措、语无伦次一样。
+
+在不了解你之前，没有人对你抱有任何看法。就算你不是朋友，也起码不是敌人。
+
+你的听众不需要你故意取悦他们。
+
+听众的认同与否，确实维系在你的内容质量上。
+
+听众想要听到的无非是拥有以下三个属性的东西： 重要的 未知的 复杂的
+
+另外一种低估听众智商的表现就是错把听众的探讨处理为敌意的挑衅。除非讲者自己已经犯了错误，或者没有说明白，听众不大可能抱有敌意。
+
+如若你是个大名人，大多数听众在你开口之前就已经“敞开了自己心扉”，做好“聆听”一切的准备。他们甚至可能早已准备好了纸笔，生怕错过一点点的信息——他们早已假定将要听到的一切都是重要的、未知的、复杂的……
+
+我们不是名人，所以听众绝不可能“盲从”。他们并未从一开始就“抗拒”，但是，他们也没有从一开始就“欢迎”。
+
+听众的目的往往只有一个，就是希望有所收获。
+
+避免被误解的有效方法有这么几个： 尽量保持简单。简单不等于“过分简化”。我是说，要尽量保持逻辑关系简单明了。只有这样才能避免不必要的误解。 避免引起听众的负面情绪。如若讲者确定自己是对的，那还真的没必要讨好听众。然而，无论是谁都没必要无端地得罪听众。最好认真审视自己的每一句话，避免那些可能会引起听众负面情绪的句子、例子、字眼。 提前做功课，做小范围内的沟通。通过日常对话、小范围内的讨论，收集不同意见，思考它们的有理之处、无理之处，而后逐一设计对应策略。在台上，可以用自问自答的方式，把这些“听众可能疑惑”的问题直接处理掉。
+
+不要指望听众能够自动与你感同身受。
+
+听众不可能完全理性，但很有可能完全感性。
+
+不仅要保证自己所用来证明结论的一切信息都是“来源可靠”的，还要向听众展示这些来源。事实上，有些时候我们甚至需要向听众证明“来源本身为什么可靠”。 其实，这不仅仅是要在讲台上做的事情，而是要在生活中从始至终贯彻的原则：做事、说话、写文章……无论做什么，都要有根据。不做没根据的事情，不说没根据的话。
+
+只使用权威的资料作为根据（只有权威才是大多数听众所信服的） 只使用公开的权威资料作为根据（即，我能获得，别人也能获得） 保证推理过程的简单（只有这样才能保证通俗易懂）
+
+抓住听众的注意力的诀窍在于：找到听众所不能解决却为之困惑苦恼的问题，提供简单有效的解决方案。
+
+要想办法了解听众，去思考他们所面临的困境是什么？最大的困境是什么？这最大的困境的根源又是什么？那有没有办法逆转这个困境？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？
+
+要想办法了解听众，去思考他们所面临的困境是什么？最大的困境是什么？这最大的困境的根源又是什么？那有没有办法逆转这个困境？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？ 这些都是优秀讲者拼命思考的问题。回答这些问题本身，就是所谓的“功课”；挣扎着把这些问题想明白弄清楚，进而再生动地讲出来，就是讲者真正的成长之路。
+
+最好的互动方式是想尽一切办法让听众思考。 在沟通过程中，恰当使用类比，是最好的“激活听众思维”方法之一。
+
+如果那结论是听众容易接受的，或者说与听众的已有观念比较接近，甚至一致，那就应该选择“先说结论后说根据”。
+
+而一旦讲者确定自己所讲与听众的已有观念不一致，甚至截然相反，却又有必要一定说清楚，那么，最好采取“先说根据，后说结论”的方式。
 
 ## 紧张
 
-回想五年前，我是个在公众面前就紧张得要死的人，说出来的话都是颤抖的！后面的五年，做了几十场分享，
+回想五年前，我是个在公众面前就紧张得要死的人，说出来的话都是颤抖的！后面的五年，做了几十场分享
 
 
 ## 做功课
