--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -38,28 +38,44 @@ author: wangyifan
 
 ## 了解听众
 
-了解听众可以从两个层面来说：
+了解听众可以从两个层面来讲：
 
 - 听众的层级
 - 听众的诉求
 
-## 听众的层级
+### 听众的层级
 
-首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的
+首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的方式来表达，所要强调的重点也有所不同。还以上面的美景为例，要向一个画家来描述美景，你不能用音乐来表达吧；要向一个写实派画家描述美景，你不能用抽象画来表达吧？
 
-不同层级，描述方式与着重点不同
+在周星驰主演的电影《韦小宝》里，陈近南忽悠韦小宝的那段话完美体现了这一点！
 
-举例：韦小宝
+```
+陈近南意味深长地：“小宝，你是个聪明人，我可以用聪明的方法和你说话，外面的人就不行”。
+韦小宝茫然：“不解”。
+陈近南：“小宝，你知道，现在聪明的人大多数已经在清廷里当官了，所以，如果我天地会要同清廷对抗，就只能用一些蠢人了。对于那些蠢人，绝对不可 以对他们说真话，只能用宗教的形式来催眠他们，使他们觉得所做的事情都是对的……所以反清复明只不过是一句口号，跟阿弥陀佛其实是一样的”。
+韦小宝眨眨眼：“噢。”
+陈近南：“清朝一直欺压我汉人，抢走我们的银两和女人，所以我们要反清……”
+韦小宝打断陈的话：“要反清就是因为他们抢了我们的钱和女人，是不是？复不复明不过是脱了裤子放屁，关人鸟事呀！行了，大家都是聪明人，了解！继续说”。
+陈近南点头：“总之呀，如果能做成功的话，就有无数的银两跟女人，你愿不愿意去呀？”
+韦小宝大喜，激昂地道：“愿意！”
+```
 
-如何确认听众层级？
+**那如何确认听众的层级呢？**
 
-## 听众的诉求
+有些培训在培训前就能确认！以我自身的经历来说，我主要是做技术培训，在做培训前就确定了培训对象，是面向刚毕业的大学生，还是面向初中级开发人员。
 
-听众的目的
-换位思考听众的困境
-保持简单-》类比
+而对于在培训前不能确认培训对象的培训，可以在培训正式开始前做个调查！比如：你想讲3岁小孩的兴趣班培训问题，可以现场问：“请问现在有三岁左右的小孩的家长有多少？”通过现场人数，可以确定该如何展开这个话题！
 
-你的听众不是你的敌人。
+### 听众的诉求
+
+我们可以回想一下，当你去听别人的分享时，你是以什么样的心态去听分享的？
+
+其实目的只有一个，就是**希望有所收获**。无论是知识上的深入，还是开阔眼界！
+
+所以当我们去演讲时，我们要尽量考虑，如何给听众带来收获！这也是在前面强调**内容的重要性**的原因！
+
+所以要去思考，在你所分享的主题下，听众所面临的问题是什么？问题的根源又是什么？那有没有办法解决这个问题？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？回答这些问题本身，就是所谓的“功课”；挣扎着把这些问题想明白弄清楚，进而再生动地讲出来，就是讲者真正的成长之路。
+
 
 既然已经决定投入时间坐在下面听你讲话，你的听众最不希望你惊慌、紧张、手足无措、语无伦次……他们最希望跟你一起度过愉悦的这段时光。听众的这种愿望，跟你一样强烈，正如你当然也不希望自己惊慌、紧张、手足无措、语无伦次一样。
 
@@ -73,11 +89,9 @@ author: wangyifan
 
 另外一种低估听众智商的表现就是错把听众的探讨处理为敌意的挑衅。除非讲者自己已经犯了错误，或者没有说明白，听众不大可能抱有敌意。
 
-如若你是个大名人，大多数听众在你开口之前就已经“敞开了自己心扉”，做好“聆听”一切的准备。他们甚至可能早已准备好了纸笔，生怕错过一点点的信息——他们早已假定将要听到的一切都是重要的、未知的、复杂的……
-
 我们不是名人，所以听众绝不可能“盲从”。他们并未从一开始就“抗拒”，但是，他们也没有从一开始就“欢迎”。
 
-听众的目的往往只有一个，就是希望有所收获。
+
 
 避免被误解的有效方法有这么几个： 尽量保持简单。简单不等于“过分简化”。我是说，要尽量保持逻辑关系简单明了。只有这样才能避免不必要的误解。 避免引起听众的负面情绪。如若讲者确定自己是对的，那还真的没必要讨好听众。然而，无论是谁都没必要无端地得罪听众。最好认真审视自己的每一句话，避免那些可能会引起听众负面情绪的句子、例子、字眼。 提前做功课，做小范围内的沟通。通过日常对话、小范围内的讨论，收集不同意见，思考它们的有理之处、无理之处，而后逐一设计对应策略。在台上，可以用自问自答的方式，把这些“听众可能疑惑”的问题直接处理掉。
 
@@ -93,7 +107,7 @@ author: wangyifan
 
 要想办法了解听众，去思考他们所面临的困境是什么？最大的困境是什么？这最大的困境的根源又是什么？那有没有办法逆转这个困境？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？
 
-要想办法了解听众，去思考他们所面临的困境是什么？最大的困境是什么？这最大的困境的根源又是什么？那有没有办法逆转这个困境？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？ 这些都是优秀讲者拼命思考的问题。回答这些问题本身，就是所谓的“功课”；挣扎着把这些问题想明白弄清楚，进而再生动地讲出来，就是讲者真正的成长之路。
+
 
 最好的互动方式是想尽一切办法让听众思考。 在沟通过程中，恰当使用类比，是最好的“激活听众思维”方法之一。
 
