--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -45,9 +45,7 @@ author: wangyifan
 
 ### 听众的层级
 
-首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的方式来表达，所要强调的重点也有所不同。还以上面的美景为例，要向一个画家来描述美景，你不能用音乐来表达吧；要向一个写实派画家描述美景，你不能用抽象画来表达吧？
-
-在周星驰主演的电影《韦小宝》里，陈近南忽悠韦小宝的那段话完美体现了这一点！
+首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的方式来表达，所要强调的重点也有所不同。还以上面的美景为例，要向一个画家来描述美景，你不能用音乐来表达吧；要向一个写实派画家描述美景，你不能用抽象画来表达吧？说得通俗易懂点就是：**见人说人话，见鬼说鬼话！**(没有贬义色彩！)在周星驰主演的电影《韦小宝》里，陈近南忽悠韦小宝的那段话完美体现了这一点！
 
 ```
 陈近南意味深长地：“小宝，你是个聪明人，我可以用聪明的方法和你说话，外面的人就不行”。
@@ -60,62 +58,39 @@ author: wangyifan
 韦小宝大喜，激昂地道：“愿意！”
 ```
 
+就我自身而言，前段时间我针对不同层级的人做了编程相关的培训，一批是刚毕业的大学生，一批是公司的初、中级开发人员，虽然都是讲编程，但是侧重点就完全不同。对大学生来说，对编程还是一无所知，我对他们讲的是编程的基本技能。而对于初、中级开发人员，已经具备了编程技能，我主要给他们讲了相关的流程及原理方面的内容。如果我反过来，对大学生讲流程和原理，他们连编程是什么还不知道，肯定是听得一脸懵逼；而对初、中级开发讲基本技能，他们肯定听得犯困，因为都是已经知道的东西。
+
+其中原由可以通过由美国人Noel Tichy提出的“舒适区”，“学习区”，“恐慌区”理论来解释！下图里的3个区可以表示为你想学习的事物的等级：
+
+- 最里面一圈，“舒适区”，对于你来说是没有学习难度的知识或者习以为常的事务，自己可以处于舒适心理状态。对初、中级开发人员讲基本技能，实际就是使他们在舒适区里。
+- 中间一圈，“学习区”，对自己来说有一定挑战，因而感到不适，但是不至于太难受。
+- 最外面一圈，“恐慌区”，超出自己能力范围太多的事务或知识，心理感觉会严重不适，可能导致崩溃以致放弃学习。对大学生将流程和原理，实际就是把他们置于恐慌区下，只会懵逼！
+
+对于一个人来说，最理想的状态是处于“学习区”，学习具有适当挑战性的东西， 一段时间后，“学习区”会慢慢变为“舒适区”， “舒适区”越变越大， 而一部分的“恐慌区” 也会相应变成“学习区”。
+
+![](/assets/think/talk/01.jpg)
+
+对讲者来说，了解听众的层级，可以调整内容的难易度，使得听众在“学习区”内得到收获！
+
 **那如何确认听众的层级呢？**
 
-有些培训在培训前就能确认！以我自身的经历来说，我主要是做技术培训，在做培训前就确定了培训对象，是面向刚毕业的大学生，还是面向初中级开发人员。
+有些培训，在培训前就能确认听众的层级！以我自身的经历来说，我主要是做技术培训，在做培训前会有通知，该培训面向的群体是谁，是面向刚毕业的大学生，还是面向初中级开发人员，还是技术大会相关演讲。
 
-而对于在培训前不能确认培训对象的培训，可以在培训正式开始前做个调查！比如：你想讲3岁小孩的兴趣班培训问题，可以现场问：“请问现在有三岁左右的小孩的家长有多少？”通过现场人数，可以确定该如何展开这个话题！
+而对于在培训前不能确认培训对象的培训，可以在培训正式开始前做个调查！比如：你想讲3岁小孩的兴趣班培训问题，可以现场问：“请问现场有多少家长朋友？有多少家长朋友想送孩子去兴趣班培训？”通过现场人数，可以确定该如何展开这个话题！
 
 ### 听众的诉求
 
-我们可以回想一下，当你去听别人的分享时，你是以什么样的心态去听分享的？
+我们可以回想一下，当我们去听别人分享的时候，我们是以什么样的心态去听分享的？
 
-其实目的只有一个，就是**希望有所收获**。无论是知识上的深入，还是开阔眼界！
+我们是去消遣吗？我相信没有人会去听分享来消遣!要消遣你可以去看场电影、或听个演唱会什么的！去砸场子吗？对于一个你不熟悉或不了解的人，为什么要去砸场子呢？除非脑子不好使了！！！其实我们去听分享的目的只有一个，就是**希望有所收获**。无论是知识上的深入，还是开阔眼界！
 
-所以当我们去演讲时，我们要尽量考虑，如何给听众带来收获！这也是在前面强调**内容的重要性**的原因！
+郭德纲在他的相声里说了个段子：“你们花500块钱过来听相声，就是图个乐，你多乐乐，才能值回票价。比如这个乐了，值20块钱，这个值30块钱，那个不好笑，退30块钱。最后一算，嗯～值了！你守着那500块钱是乐不出来的，如果你看着500块钱真乐了，这个病你500块钱治不好～”
 
-所以要去思考，在你所分享的主题下，听众所面临的问题是什么？问题的根源又是什么？那有没有办法解决这个问题？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？回答这些问题本身，就是所谓的“功课”；挣扎着把这些问题想明白弄清楚，进而再生动地讲出来，就是讲者真正的成长之路。
+套用到分享上，即使有的分享是免费的，不过大家都是花费了时间成本、机会成本的。听众在听的时候也会有类似的计算，这场分享我收获了什么、长了哪些见识！还是一堆废话、或完全听不懂！最后听众会评判这场分享是否值得他们花费的时间成本和机会成本！
 
+所以反过来，当我们自己去演讲时，我们要尽量考虑，如何给听众带来收获！这也是在前面强调**内容的重要性**的原因！
 
-既然已经决定投入时间坐在下面听你讲话，你的听众最不希望你惊慌、紧张、手足无措、语无伦次……他们最希望跟你一起度过愉悦的这段时光。听众的这种愿望，跟你一样强烈，正如你当然也不希望自己惊慌、紧张、手足无措、语无伦次一样。
-
-在不了解你之前，没有人对你抱有任何看法。就算你不是朋友，也起码不是敌人。
-
-你的听众不需要你故意取悦他们。
-
-听众的认同与否，确实维系在你的内容质量上。
-
-听众想要听到的无非是拥有以下三个属性的东西： 重要的 未知的 复杂的
-
-另外一种低估听众智商的表现就是错把听众的探讨处理为敌意的挑衅。除非讲者自己已经犯了错误，或者没有说明白，听众不大可能抱有敌意。
-
-我们不是名人，所以听众绝不可能“盲从”。他们并未从一开始就“抗拒”，但是，他们也没有从一开始就“欢迎”。
-
-
-
-避免被误解的有效方法有这么几个： 尽量保持简单。简单不等于“过分简化”。我是说，要尽量保持逻辑关系简单明了。只有这样才能避免不必要的误解。 避免引起听众的负面情绪。如若讲者确定自己是对的，那还真的没必要讨好听众。然而，无论是谁都没必要无端地得罪听众。最好认真审视自己的每一句话，避免那些可能会引起听众负面情绪的句子、例子、字眼。 提前做功课，做小范围内的沟通。通过日常对话、小范围内的讨论，收集不同意见，思考它们的有理之处、无理之处，而后逐一设计对应策略。在台上，可以用自问自答的方式，把这些“听众可能疑惑”的问题直接处理掉。
-
-不要指望听众能够自动与你感同身受。
-
-听众不可能完全理性，但很有可能完全感性。
-
-不仅要保证自己所用来证明结论的一切信息都是“来源可靠”的，还要向听众展示这些来源。事实上，有些时候我们甚至需要向听众证明“来源本身为什么可靠”。 其实，这不仅仅是要在讲台上做的事情，而是要在生活中从始至终贯彻的原则：做事、说话、写文章……无论做什么，都要有根据。不做没根据的事情，不说没根据的话。
-
-只使用权威的资料作为根据（只有权威才是大多数听众所信服的） 只使用公开的权威资料作为根据（即，我能获得，别人也能获得） 保证推理过程的简单（只有这样才能保证通俗易懂）
-
-抓住听众的注意力的诀窍在于：找到听众所不能解决却为之困惑苦恼的问题，提供简单有效的解决方案。
-
-要想办法了解听众，去思考他们所面临的困境是什么？最大的困境是什么？这最大的困境的根源又是什么？那有没有办法逆转这个困境？有没有更简单更有效的方法？能不能把事实步骤更加具体化？实施具体步骤时可能遇到的问题是什么？又应该如何解决这些问题？
-
-
-
-最好的互动方式是想尽一切办法让听众思考。 在沟通过程中，恰当使用类比，是最好的“激活听众思维”方法之一。
-
-如果那结论是听众容易接受的，或者说与听众的已有观念比较接近，甚至一致，那就应该选择“先说结论后说根据”。
-
-而一旦讲者确定自己所讲与听众的已有观念不一致，甚至截然相反，却又有必要一定说清楚，那么，最好采取“先说根据，后说结论”的方式。
-
-## 紧张
+## 缓解紧张
 
 回想五年前，我是个在公众面前就紧张得要死的人，说出来的话都是颤抖的！后面的五年，做了几十场分享
 
