--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -5,10 +5,11 @@ categories: [think]
 tags: [experience,think]
 avatarimg: "/img/head.jpg"
 author: wangyifan
+published: false
 
 ---
 
-## 内容大于形式
+# 内容大于形式
 
 网上有个段子，问：为什么要学习语文？答：当你看到江边落日余晖的美景时，你能脱口而出“落霞与孤鹜齐飞，秋水共长天一色”这样的句子，而不是说一句“卧槽，美爆了！”
 
@@ -36,17 +37,18 @@ author: wangyifan
 例如，在工作中遇到的问题，你总结归纳出一套有效的解决方法！你实现了一套工具，能有效的提高工作效率！对某个新领域，别人都不太了解，就你知道！等等等等，这些都是可以分享的内容！
 
 
-## 了解听众
+# 了解听众
 
 了解听众可以从两个层面来讲：
 
 - 听众的层级
 - 听众的诉求
 
-### 听众的层级
+## 听众的层级
 
 首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的方式来表达，所要强调的重点也有所不同。还以上面的美景为例，要向一个画家来描述美景，你不能用音乐来表达吧；要向一个写实派画家描述美景，你不能用抽象画来表达吧？说得通俗易懂点就是：**见人说人话，见鬼说鬼话！**(没有贬义色彩！)在周星驰主演的电影《韦小宝》里，陈近南忽悠韦小宝的那段话完美体现了这一点！
 
+---
 ```
 陈近南意味深长地：“小宝，你是个聪明人，我可以用聪明的方法和你说话，外面的人就不行”。
 韦小宝茫然：“不解”。
@@ -78,7 +80,7 @@ author: wangyifan
 
 而对于在培训前不能确认培训对象的培训，可以在培训正式开始前做个调查！比如：你想讲3岁小孩的兴趣班培训问题，可以现场问：“请问现场有多少家长朋友？有多少家长朋友想送孩子去兴趣班培训？”通过现场人数，可以确定该如何展开这个话题！
 
-### 听众的诉求
+## 听众的诉求
 
 我们可以回想一下，当我们去听别人分享的时候，我们是以什么样的心态去听分享的？
 
@@ -90,16 +92,16 @@ author: wangyifan
 
 所以反过来，当我们自己去演讲时，我们要尽量考虑，如何给听众带来收获！这也是在前面强调**内容的重要性**的原因！
 
-## 缓解紧张
+# 缓解紧张
 
 回想五年前，我是个在公众面前就紧张得要死的人，说出来的话都是颤抖的！后面的五年，做了几十场分享
 
 
-## 做功课
+# 做功课
 
-## 回答问题
+# 回答问题
 
-## 技巧
+# 技巧
 
 - 名人讲演
 - 惊喜
