--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -94,7 +94,37 @@ published: false
 
 # 缓解紧张
 
-回想五年前，我是个在公众面前就紧张得要死的人，说出来的话都是颤抖的！后面的五年，做了几十场分享
+
+- 紧张是普遍现象
+罗永浩，罗振宇，李笑来 《这一代人的怕与爱》
+- 紧张的原因
+本能
+- 紧张的
+- 如何缓解紧张
+
+李广射虎是记载于司马迁史记里面的故事，原文是：李广出猎，见草中石，以为虎而射之，中石没镞，视之石也。因复更射之，终不能复入石矣。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # 做功课
