--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -94,38 +94,41 @@ published: false
 
 # 缓解紧张
 
+我有段时间很羡慕那些在台上收放自如的讲者，羡慕他们在台上的从容，为什么他们不紧张呢？应该有不少人都有这样的想法吧？
 
-- 紧张是普遍现象
-罗永浩，罗振宇，李笑来 《这一代人的怕与爱》
-- 紧张的原因
-本能
-- 紧张的
-- 如何缓解紧张
+我一度认为自己紧张是由于自己内向的性格导致；而实际上看了《内向也是一种优势》后，发现自己对内向的认识也是错的(我确实是内向性格，但内向性格不是我想的那样),具体可见[此文](https://www.ivaneye.com/2016/10/16/introvert.html)。
 
-李广射虎是记载于司马迁史记里面的故事，原文是：李广出猎，见草中石，以为虎而射之，中石没镞，视之石也。因复更射之，终不能复入石矣。
+实际上，**紧张是普遍现象**。像罗永浩、罗振宇、李笑来等这些比较经常做公众演讲的人也都会紧张。比如，罗永浩在他的《我的奋斗》这本书里就说了他当年应聘新东方老师的经历，由于紧张，差点就没进入新东方；罗胖呢，你可以去听一听他第25期的罗辑思维《这一代人的怕与爱》，这是罗辑思维开播以来，罗胖第一次公开演讲。你再对比下前一期录制的罗辑思维，你就能明显的感觉到罗胖的紧张了；李笑来在他的《我也有话要说》里，也说了自己演讲会紧张！
 
+所以，**其实大家都紧张**，只是程度不同或者你看不出来而已！
 
+那人为什么会紧张呢？网上有不少说法，个人觉得紧张的原因有两个！
 
+一个是**本能**！想象一个场景，一个月黑风高的夜晚，你一个人走在路上，这时突然有两个人慌慌张张的从你身边跑过，你会不会立马警觉起来？30秒后，又有几个人慌慌张张的从你身边跑过，你会不会开始紧张了？再过30秒，又有一群人慌慌张张的从你身边跑过，你会不由自主的跟着这群人跑吗？
 
+当然，你可能胆子比较大，好奇前面发生了什么，跑过去看！**有好奇心的原始人就是这么灭绝的**！！！能活命的都是警觉性比较高的！所以警觉性就成为了我们的本能根植到了我们的基因里了！
 
+而在台上演讲时，台下听众的目光都盯着你看。这要是在原始时代，这么多双眼睛盯着你，那基本就说明你陷入了危险之中了，能不紧张吗？
 
+紧张的另一个原因，就是**未知**！你不知道未来会发生什么！即所谓的**不怕贼偷，就怕贼惦记**！回想一下，你在上学，老师突然有一天说：“明天考试”！你是不是立马就紧张了？因为你不知道考试内容！而最紧张的时候是什么时候呢？是发卷子的时候！而当你拿到卷子后，反而没那么紧张了吧！考完试，报分数的时候，你是不是又特紧张了？所以唬人的有效方法不是**你瞅啥**？而是**你等着**！！！
 
+再回到演讲上，就是因为你不知道演讲时会发生什么事，所以才会紧张！你没法确保在台上不忘词、也不能确保就能回答出听众的所有问题！
 
+其实**适度的紧张并没有坏处**，上面说了在原始时代，紧张是能保命的！除了能保命，紧张还能**激发潜能**!
 
+司马迁史记里记载了关于李广射虎的故事！又是在一个月黑风高的夜晚，李广走在树林里，突然看到不远处有个黑影，以为是老虎，遂张弓射箭，一下子就射中了！走近一看，其实是块石头，刚才射的箭的箭头已经射到石头里了。李广回到原地，重新对着石头射，怎么也不能把箭再射到石头里！因为紧张感没了！所以，**适度的紧张是有益的！**
 
+既然紧张根植在我们的基因里，而适度的紧张又是有益的！那我们不能消除紧张，只能尽量**缓解紧张**!
 
+如何**缓解紧张**呢？**刻意练习**！
 
+前面说了，**紧张的其中一个原因是未知，未知的原因是没做过**!所以你不踏出这一步，只能在这个圈里打转！这可以回到前面说的“舒适区”、“学习区”，“恐慌区”理论！你一直在舒适区里，不去学习区，你永远得不到成长，你永远在台下羡慕着台上的人！别人在不断的练习，不断的扩大舒适区，最后可能他的舒适区超过了你的恐慌区！所以在你看来你会紧张得要死的场合，别人能轻松的应付！
 
+当然你不可能一口吃成胖子！你从来没做过演讲，不可能立刻去做上万听众的演讲！只能一步一步来！以我个人为例，五年前，我是个在台前就紧张得要死、手心出、浑身发抖，基本说不出话的人！在这五年里，我从会议上的发言开始，到三、五人的内部分享，再到几十人的大学生培训、内部员工培训，一直到最近公司里的技术大会演讲！一步步的慢慢练习！现在我依然会紧张，但是我知道要准备什么，知道要说什么！内部培训、员工培训什么的，现在对我来说，基本都能掌控了！
 
+所以，尝试走出那一步，有了第一次，你就会发现，原来就那么回事！**无关性格，只关乎经历**！
 
-
-
-
-
-
-
-
-
+当然了，你得**有备而来**！
 
 # 做功课
 
