--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -25,10 +25,9 @@ published: false
 
 不可否认老师的演讲技巧！是进门就讲了，是在规定时间里讲完了！但是！！！我不知道对非技术人员来说是什么感觉，反正对技术人员来说，就是扯淡！！！为什么呢？这位老师只知道Oracle是个软件，其它一无所知，特别是对“高可用”的理解，就是谬误了！他在两分钟的演讲里，说的内容实际是“如何做出好用的软件”！
 
-```
-高可用：
+
+> **高可用**：
   英文名High Availability，简称HA。简单来说，就是保证软件的不间断运行！“如何实现Oracle高可用？”其实就是要说如何保证Oracle的不间断运行！和如何使Oracle好用完全就是两码事！
-```
 
 所以，如果你的内容本来就是错误的、空洞的，演讲得再动听都没用！就好比是以前很流行的电视广告，无论什么东西，推广人员都能说得天花乱坠，例如就一个晾衣架，用户都能被说得心潮澎湃的，这就是推广人员的技巧！但是如果用户最后买回来发现是个垃圾(没有内容)，最终用户是不会买帐的！最终结果不是退货，就是用户再也不会买该公司的产品了！而且后面这个推广人员再怎么口若悬河，大家也只会嗤之以鼻！
 
@@ -48,9 +47,8 @@ published: false
 
 首先你需要了解听众的层级，相同的内容对不同层级的听众需要通过不同的方式来表达，所要强调的重点也有所不同。还以上面的美景为例，要向一个画家来描述美景，你不能用音乐来表达吧；要向一个写实派画家描述美景，你不能用抽象画来表达吧？说得通俗易懂点就是：**见人说人话，见鬼说鬼话！**(没有贬义色彩！)在周星驰主演的电影《韦小宝》里，陈近南忽悠韦小宝的那段话完美体现了这一点！
 
----
-```
-陈近南意味深长地：“小宝，你是个聪明人，我可以用聪明的方法和你说话，外面的人就不行”。
+
+> 陈近南意味深长地：“小宝，你是个聪明人，我可以用聪明的方法和你说话，外面的人就不行”。
 韦小宝茫然：“不解”。
 陈近南：“小宝，你知道，现在聪明的人大多数已经在清廷里当官了，所以，如果我天地会要同清廷对抗，就只能用一些蠢人了。对于那些蠢人，绝对不可 以对他们说真话，只能用宗教的形式来催眠他们，使他们觉得所做的事情都是对的……所以反清复明只不过是一句口号，跟阿弥陀佛其实是一样的”。
 韦小宝眨眨眼：“噢。”
@@ -58,7 +56,6 @@ published: false
 韦小宝打断陈的话：“要反清就是因为他们抢了我们的钱和女人，是不是？复不复明不过是脱了裤子放屁，关人鸟事呀！行了，大家都是聪明人，了解！继续说”。
 陈近南点头：“总之呀，如果能做成功的话，就有无数的银两跟女人，你愿不愿意去呀？”
 韦小宝大喜，激昂地道：“愿意！”
-```
 
 就我自身而言，前段时间我针对不同层级的人做了编程相关的培训，一批是刚毕业的大学生，一批是公司的初、中级开发人员，虽然都是讲编程，但是侧重点就完全不同。对大学生来说，对编程还是一无所知，我对他们讲的是编程的基本技能。而对于初、中级开发人员，已经具备了编程技能，我主要给他们讲了相关的流程及原理方面的内容。如果我反过来，对大学生讲流程和原理，他们连编程是什么还不知道，肯定是听得一脸懵逼；而对初、中级开发讲基本技能，他们肯定听得犯困，因为都是已经知道的东西。
 
@@ -130,7 +127,40 @@ published: false
 
 当然了，你得**有备而来**！
 
-# 做准备
+# 准备工作
+
+- 准备Slideshow/准备演讲稿
+准备什么？如何准备？
+- 预演
+为什么要预演？
+
+“乔布斯通常会提前数月准备自己的新品发布会以及其他一些公关场合的出席安排，并会对此进行事无巨细的预演。我曾有一次花了一整天时间看到他针对一场发布会展开了数次彩排，并对包括演讲稿色调、聚光灯角度以及为了更好的演讲节奏而调整了PPT的顺序这些细节进行了微调。如果其中出现某些技术问题的话，乔布斯会变得非常恼火。
+
+【事无巨细 精心策划】
+
+　　据外媒报道，乔布斯通常会提前数月准备自己的新品发布会以及其他一些公关场合的出席安排，并会对此进行事无巨细的预演。
+
+　　【设定好主题】
+
+　　乔布斯在准备发布会时都会提前设定好主题，并把主题放在发布会开头，以达到开门见山的效果。
+
+　　【条理清晰的大纲】
+
+　　参加过乔布斯发布会的人都会对乔布斯条理清晰的大纲印象深刻。事实上，乔布斯在演讲之前就有条理有逻辑的列好大纲，在演讲之中更是时时展示大纲。
+
+　　【图形化的幻灯片】
+
+　　乔布斯在发布会上使用的幻灯片非常简洁，只有一些启发性、相关的图片和简单的字，比如乔布斯在讲到“我今天想要告诉你们的第一件事”之时，幻灯片上只显示了一个数字“1”。
+
+　　【精心准备高潮场景】
+
+　　一场演讲一定要有一个令人印象极其深刻的时刻。在乔布斯的发布会上，会提前设计好高潮场景。比如乔布斯发布Air 的时候说，它非常薄，可以装进一个信封，然后他就从一只信封里拿出了一台Air，全场惊叹。
+
+　　【排练，排练，再排练】
+
+　　乔布斯在演讲之前会大声排练数小时，科技记者布兰特-施兰德曾看到他“花了一整天展开了数次彩排，并对包括演讲稿色调、聚光灯角度以及为了更好的演讲节奏而调整了PPT的顺序这些细节进行了微调。”
+
+无实物表演
 
 # 回答问题
 
