--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 我所期望的写作模式
+title: 我的写作环境
 categories: [think]
 tags: [think,随笔]
 avatarimg: "/img/head.jpg"
@@ -9,29 +9,7 @@ published: false
 
 ---
 
-
-
-
-
-
-
-
-
-
-
-
-
-# 历程
-## Iteye
-- 编辑器太挫
-## WordPress
-- 写作外要关心的杂事太多
-## GithubPage
-- 速度太慢
-- GFW
-- 屏蔽百度爬虫
-# 期望
-## 写作方式
-## 保存方式
-## 发布模式
-# 现状
+# 主力环境
+# 写作工具
+# 保存
+# 发布
