--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -129,51 +129,63 @@ published: false
 
 # 准备工作
 
-- 准备Slideshow/准备演讲稿
-准备什么？如何准备？
-- 预演
-为什么要预演？
+在你确定了演讲内容、面向的听众后，就要开始着手准备了。**再牛逼的演讲高手都需要准备**！即使是乔布斯也不例外，或者说就是因为充份的准备，才使得苹果的每场发布会都能引起震撼，成为演讲范本---乔布斯在每场发布会之前，都会提前很长时间做充足的准备，不是提前几天，也不是提前几个星期，是提前几个月。
 
-“乔布斯通常会提前数月准备自己的新品发布会以及其他一些公关场合的出席安排，并会对此进行事无巨细的预演。我曾有一次花了一整天时间看到他针对一场发布会展开了数次彩排，并对包括演讲稿色调、聚光灯角度以及为了更好的演讲节奏而调整了PPT的顺序这些细节进行了微调。如果其中出现某些技术问题的话，乔布斯会变得非常恼火。
+我以前的一个误区是：“演讲是需要天份的！”相信不止我一个人有这个想法吧？很久以前，我以为那些在台上侃侃而谈的人，一是由于性格外向，二来就是有天份。实际上两个观点都是错误的。是否能在台上侃侃而谈和性格没有关系，前面已经说了。而天份呢？用网络的一个段子来回答：“我努力的时候，你看不到！我成功了，你TM跟我说有天份”！
 
-【事无巨细 精心策划】
+**台上一分钟，台下十年功**！不止是适用于演员！对演讲者而言也是这样！台上的每一分钟表现都是需要台下花十倍，百倍甚至千倍的时间来准备的！为什么？
 
-　　据外媒报道，乔布斯通常会提前数月准备自己的新品发布会以及其他一些公关场合的出席安排，并会对此进行事无巨细的预演。
+- 首先，前面已经说了，其实大家都会紧张，只是演讲高手能控制住而已。而且就压力而言，演讲高手的压力要比新手压力大得多！就以乔布斯为例，他的每场发布会都影响着苹果新产品的销售额，万一发布会搞砸了，导致新品无人问津，那损失的可是上亿美元。而对于我们新手来说，演讲失败不过是被听者抱怨一下，压力其实并没有想象中那么大！即使失败了，只要自我总结，实际上是个**提升的过程**。话虽这样说，但是**谁不更愿意成功呢？谁不愿意一鸣惊人？**
 
-　　【设定好主题】
+- 其次，就是**未知**。在演讲过程中，无法确保不发生意外情况。比如说，突然忘词了；机器故障了；演示失败了！该如何应对？为了能够应付可能的突发情况，需要做好充分的应对措施。比较出名的突发情况，就是比尔盖茨在演示Windows的时候，突然蓝屏了，那个尴尬，大家应该能想象得到吧？
 
-　　乔布斯在准备发布会时都会提前设定好主题，并把主题放在发布会开头，以达到开门见山的效果。
+- 最后，你需要准备幻灯片或白板等演示！根据美国哈佛商学院有关研究人员的分析资料表明，人的大脑每天通过五种感官接受外部信息的比例分别为：味觉1%，触觉1.5%，嗅觉3.5%，听觉11%，以及视觉83%。如果你只是在台上巴拉巴拉的干说的话，听众的接收度其实是很低的。有了演示后，听众接收的内容会大幅增加。使得你的演讲的接收度更高！可以简单计算一下，以你的内容为100来看，假如听众的理解程度为80%，你只是说的话，那么最终听众的理解程度只有100 \* 11% \* 80% = 8.8！而如果你使用幻灯片的话，那么最终听众的理解程度可以达到100 \* (11% + 83%) \* 80% = 75.2！**差距有九倍之多**！
 
-　　【条理清晰的大纲】
+那我们该**准备些什么呢？**
 
-　　参加过乔布斯发布会的人都会对乔布斯条理清晰的大纲印象深刻。事实上，乔布斯在演讲之前就有条理有逻辑的列好大纲，在演讲之中更是时时展示大纲。
+首先，就是幻灯片了，可以是PPT、也可以是Keynote，甚至网页版的SlideShow或者pdf都可以(**重在内容**)！布局、动画、样式这些东西对新手来说都不是重点。对于一般的分享，我偏向于使用网页版的SlideShow，例如nodePPT,pandoc+reveal.js等！第一，我可以使用Markdown来编写内容，使用它们直接渲染成幻灯片，也可以转化成其他格式，比如:docx,pdf等，**一次编写，到处生成**！我不必关心样式、布局，只关心内容就可以了。第二，网页版的SlideShow方便访问，我上传到我的网站上后，只要有网络，在哪里都可以演示（这里就是我编写的一个PPT,https://www.ivaneye.com/ppt/share/nodeppt/jvm.htm）！ 而比较正式的场合，比如技术大会，我才会使用PPT。我个人并不太喜欢用ppt，在《从用户体验角度看工具》(https://www.ivaneye.com/2016/04/08/tools.html) 里，我专门对Office做了吐槽！
 
-　　【图形化的幻灯片】
+除了幻灯片，对新手来说，很必要准备**演讲稿**。也就是把你将要讲的内容，完完全全的写下来。为什么呢？第一，如果你一上台，脑子就空白了，忘词了，就把演讲稿给背下来。给自己留条后路，做不到一鸣惊人，至少把演讲讲完！第二呢，你写下演讲稿后，自己多读几遍，你就会发现有很多地方语言是不通顺的、逻辑是不清晰的，读完后可能自己都不知道在说什么。这些地方都是要进行调整的地方。
 
-　　乔布斯在发布会上使用的幻灯片非常简洁，只有一些启发性、相关的图片和简单的字，比如乔布斯在讲到“我今天想要告诉你们的第一件事”之时，幻灯片上只显示了一个数字“1”。
+最后，就是预演。光有幻灯片和演讲稿没用，你得熟悉才行。你不能准备完幻灯片和演讲稿就完事了，然后到上台之前都不再看了！这样会出现两种情况，一种就是你的幻灯片全是文字，你照着幻灯片读！我知道很多大学老师讲课就是这么讲的！你是听众的话，你听着不犯困吗？另一种情况是，你的幻灯片很简洁，但是你完全忘了幻灯片的结构，直接大眼瞪小眼了！你可能会说，有演讲稿啊！记住，**幻灯片是给听众整理思路的！演讲稿是给你梳理语言的**！不是让你带上台念的！太low了！
 
-　　【精心准备高潮场景】
+还有最最重要的一点，就是准备回答听众的问题，这个后面单独说。
 
-　　一场演讲一定要有一个令人印象极其深刻的时刻。在乔布斯的发布会上，会提前设计好高潮场景。比如乔布斯发布Air 的时候说，它非常薄，可以装进一个信封，然后他就从一只信封里拿出了一台Air，全场惊叹。
+我们知道了要准备什么，那该**如何准备呢？**
 
-　　【排练，排练，再排练】
+对于演讲稿和幻灯片的准备，到底**是先写演讲稿然后总结归纳出幻灯片，还是先做幻灯片再细化展开成演讲稿，这个看个人习惯**。我两个都尝试过，最后还是习惯于先做幻灯片，再细化成演讲稿！这种做法对我来说，有两个好处。一是，因为我个人的思路就是先有个整体结构，然后一个个的细化，典型的程序员思维！所以先做幻灯片（实际上就是Markdown文档）再细化符合我的思维习惯。二来，如果是我熟悉的演讲，我做完幻灯片，演讲稿也可以省了！
 
-　　乔布斯在演讲之前会大声排练数小时，科技记者布兰特-施兰德曾看到他“花了一整天展开了数次彩排，并对包括演讲稿色调、聚光灯角度以及为了更好的演讲节奏而调整了PPT的顺序这些细节进行了微调。”
+而对于预演，乔布斯可以提前把会场包下来进行现场排练，我们可没这个条件。怎么办呢？表演里面有个叫**无实物表演**的表演方式！什么意思呢？就是什么都没有，表演一个打电话、敲门的过程，是不是很傻？但是是很考验演技的。很久以前，陈佩斯和朱时茂表演的小品《吃面》里，陈佩斯就有对吃面的“无实物表演”。还有之前的好莱坞电影复仇者联盟，实际的英雄打斗基本都是无实物表演，在无特效的下，猩红女巫就是个女神经！！！
 
-无实物表演
+![](/assets/think/talk/02.gif)
+
+我们可以用类似的方法进行练习！脑子里想象有很多人来听你的演讲，然后开始你的演讲，模拟出你在台上的所有动作！如果你觉得丢人或不好意思，那就找个没人的地方。以前很火的疯狂英语创始人李阳，练英语的方法就是找个没人的地方去吼英语！练演讲没必要吼，正常的说话就可以了，所以在自己屋里就可以了。
+
+这样做的目的有三个：
+
+- **预估时间**：预估你的演讲所花费的时间。比如你把文字稿念一遍要花多长时间？这个时间可以说是你演讲所需要的最短时间！你再脱稿演讲一遍，看要花多长时间？第一次脱稿演讲时间，基本是你演讲所要花费的最长时间。根据这两个时间，你基本能预估你的演讲时间了！
+- **反馈调整**：在预演时最好录音，过程中无论什么情况都不要停，比如卡壳了，说错了。修正也好，继续说也行，都不要停。全部说完了，再去听录音，根据录音来做调整。哪里说得还不错，哪里需要改进，哪里语气要调整了。
+- **找感觉**：想像听众的目的，就是模拟现场。使自己能熟悉那种感觉，能降低正式演讲时的紧张感。因为你不再是一无所知的了，虽然只是模拟的！
+
+准备的目的就是找熟悉感，降低紧张或突发情况带来的影响，使得演讲能够顺利完成！
 
 # 回答问题
 
-# 技巧
+- 如何准备问题
+- 如何回答问题
+- 如何处理无法回答的问题
 
-- 名人讲演
-- 惊喜
+# 演讲技巧
+
+- 开头
 - 一次只说一件事
 - 具体化数字
-- 契诃夫之枪
+- 类比
 - 语速
 - 停顿
 - 名言名句
+
+说了这么多废话，不如各位有没有体会？其实最切身的体会就是自己去做一场演讲！**知行和一**就是说**知道做不到，等于不知道！**
 
 # 参考资料
 
