--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -171,9 +171,20 @@ published: false
 
 # 回答问题
 
+减法操作
+
 - 如何准备问题
+
+    - 划清内容界限
+    - 理清概念
+    - 打磨用词
+
 - 如何回答问题
-- 如何处理无法回答的问题
+
+    - 按自己的理解复述听众的问题，确认是否理解有误
+    - 如果是自己准备的问题：
+    - 如果不是自己准备的问题：
+    - 如果是无法回答问题：
 
 # 演讲技巧
 
