--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -171,20 +171,28 @@ published: false
 
 # 回答问题
 
-减法操作
+如果说准备幻灯片和演讲稿是做**加法操作**，那么对问题的准备就是做**减法操作**!
 
-- 如何准备问题
+对问题的准备，你需要先**划清内容的界限**！即针对你的演讲主题，以及结合前面所说的听众的层级，确定你所讲内容的广度和深度！不只是要考虑前面所说的听众的接受能力，还为了最后听众的提问！假如内容太广，则深度不够，听众都能听懂，最后可能没什么问题可问！而如果内容太深，导致听众完全听不懂，可能最后听众也完全提不出问题来！两种情况都可能导致最后的尴尬局面。
 
-    - 划清内容界限
-    - 理清概念
-    - 打磨用词
+内容的控制，最好把控在最后听众能提两到三个问题的程度。这样既不会冷场，也不会由于问题太多，无法一一回答，让有疑问的听众无法得到满意的答复！
 
-- 如何回答问题
+如何把控内容呢？有个前提，就是你自己得**理清概念**！即你需要**清楚你所讲内容的相关的所有概念**！那什么是概念呢？**概念是对某一类事物或规律的抽象**！对技术类演讲更是如此，因为技术类的所谓的**术语**很多(其实就是概念)，如果你只是用，而不清楚这些术语是什么，那最后听众提问的时候就尴尬了！比如：你要讲分布式缓存系统！你巴拉巴拉的讲了一个小时，怎么设计，怎么实现的，有哪些哪些优势，秒杀目前市面上的其他系统！最后听众问你什么是**分布式**！你回答不上来，是不是很尴尬？**你自己都不能完全搞明白的内容，你好意思去分享？！**
 
-    - 按自己的理解复述听众的问题，确认是否理解有误
-    - 如果是自己准备的问题：
-    - 如果不是自己准备的问题：
-    - 如果是无法回答问题：
+理清概念后，你需要确认哪些是核心概念，哪些是非核心概念，对核心概念需要详细讲解，针对这些讲解，你需要**打磨你的用词**，让别人能没歧义的理解你的内容！你用的这个词是什么意思？听众能不能听懂这个词？或者说听众对这个词是否可能会有误解？我是否要对这个词做些解释？比如：我之前演讲的题目叫---《*** 的演变》，那什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？这个题目和我的内容是否契合？等等等等！
+
+同时在准备内容时，多问几个为什么！我为什么要讲这个？别人听了有什么收获？我这样讲别人能不能听懂？别人在这个地方可能会遇到什么坑？可能会有什么疑问？我该如何回答他？
+
+最后，在预演时，最好模拟一下听众提问环节，你从听众的角度来思考一下，可以提什么问题，进行模拟，自问自答！
+
+**这样做的目的，是为了确保听众最后所提出的问题是对你核心内容的疑问，而不是对其中的非核心概念或用词不清的疑问！**
+
+前面只是准备阶段。在正式演讲后，你在回答听众问题时，最好注意如下几点：
+
+- 听众提出问题后，你按自己的理解复述一遍听众的问题，并和听众确认是否理解有误。这样做的目的，第一是确认听众的问题是什么。第二实际是**给自己一个思考的时间**。
+- 如果这个问题是自己准备的问题，那么就将现成的答案说出来就行了
+- 而如果这个问题不是之前自己已经准备的问题：那么在复述听众问题时，快速的思考一下如何回答这个问题。一般来说，听众提出的问题都是对你所讲内容的一些疑问(如果你做了前面的准备的话)，你进行答疑即可。
+- 但是如果自己确实无法回答这个问题：那么如果这个问题已经超出了你所讲内容的范围，你可以回答说：“这个问题不在我们今天讨论的范围内！如果有兴趣的话，我们可以会后找时间一起探讨”！如果问题在你所讲内容的范围呢，但是你依然无法回答(一部分原因就是准备不足了，也可能是确实没遇到过)。那么，你可以如实回答：“不好意思，个人能力有限，目前这个问题我还无法回答，我先记下来，有机会我们可以一起来讨论一下”！
 
 # 演讲技巧
 
