--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -194,17 +194,82 @@ published: false
 - 而如果这个问题不是之前自己已经准备的问题：那么在复述听众问题时，快速的思考一下如何回答这个问题。一般来说，听众提出的问题都是对你所讲内容的一些疑问(如果你做了前面的准备的话)，你进行答疑即可。
 - 但是如果自己确实无法回答这个问题：那么如果这个问题已经超出了你所讲内容的范围，你可以回答说：“这个问题不在我们今天讨论的范围内！如果有兴趣的话，我们可以会后找时间一起探讨”！如果问题在你所讲内容的范围呢，但是你依然无法回答(一部分原因就是准备不足了，也可能是确实没遇到过)。那么，你可以如实回答：“不好意思，个人能力有限，目前这个问题我还无法回答，我先记下来，有机会我们可以一起来讨论一下”！
 
-# 演讲技巧
+# 几个技巧
 
-- 开头
-- 一次只说一件事
-- 具体化数字
-- 类比
-- 语速
-- 停顿
-- 名言名句
+你至今走过最长的路是什么路？是**套路**！演讲也不例外，最后一篇，介绍几个常用演讲套路！
 
-说了这么多废话，不如各位有没有体会？其实最切身的体会就是自己去做一场演讲！**知行和一**就是说**知道做不到，等于不知道！**
+## 坡道-发现-甜点
+
+这是《高效演讲》里介绍的套路。
+
+- **坡道**：吸引全场兴趣的开始。
+- **发现**：演讲的主体，把你准备的要点逐一讲清楚，视时间长短来决定详略。
+- **甜点**：演讲的收尾。用一个故事、一首诗、一句名言都可以作为很好的甜点。但是不建议在问答环节结束演讲。
+
+我们一个一个来说！首先说**坡道**，其实就是我们说的开头！在相声里有个叫“定场诗”的东西，和我们说的坡道很类似，都是为了吸引听众的注意，开始安静的听演讲或相声！所以一般开头的时间都比较短。
+
+即使开头短，也是有套路的！《高效演讲》里给出了几个重要的原则：
+
+- 讲话中用一次“**我**”就要用十次“**你**”！
+- **七秒法则**：只有七秒钟去争取听众的注意力，所以第一句话就要和听众有关系
+- **开头慎用玩笑**，因为大家可能不笑
+- 不要把精彩的东西放在最后，**开头最重要**
+
+以及常用坡道：
+
+- 以“**你们**”开头，说出听众的心声
+- 运用强大的震撼力的数字
+- 提出问题
+- 令观众震撼
+- 坦白
+- 想象
+- 讲述历史轶事
+- 讲故事
+
+之前公司做的演讲培训里，老师也给了类似的套路。他给出的套路是：
+
+- 提出两个问题
+- 感谢两个人
+- 为什么我来讲
+
+举个例子：假如你要做关于逻辑思维的演讲，你可以这样开头：“首先，我想问大家两个问题。大家有没有觉得那些很厉害的人都有一套自己的思维模式？大家认不认同思维决定高度这句话？在这里，我要感谢xxx，举办了这场演讲，使得我们能在一起共同探讨和学习。同时也感谢xxx，教会了我逻辑思维能力。我是xxx，有xxx经验，今天由我来给大家做这个分享！”
+
+我个人不太喜欢这个套路，我一般提出问题后就开始了！这里把它写出来，主要是供大家参考！
+
+**发现** 就是我们说的内容，前面已经花了很长篇幅来说了，这里不再赘述！
+
+**甜点** 类似总结性的话。最好能**和开头呼应**。假如我们是以问题开头的，那么我们就可以在最后给出一个答案。如果是以故事开头的，这里可以给出故事的结尾。
+
+
+## 一次只说一件事
+
+软件开发里有个原则叫单一职责原则(SRP：Single responsibility principle)，即对一段代码，只有一种导致其发生变化的原因！为了保持代码的逻辑连惯性和简单性！
+
+在Linux里也有类似的观点，**Do one thing at a time and do well**!
+
+在演讲里也是类似的，**一次只说一件事**！把这件事说明白了，再去说另外一件事。保持听众的思维连贯！如果你讲的内容包含了多个内容，听众需要自行去区分，增加了听众的理解难度！
+
+## 具体化数字
+
+这个建议最经典的例子就是乔布斯对第一代ipod的介绍！
+
+> 一台CD播放器要75美元左右，能容纳10~15首歌，也就是5美元一首歌。你也可以花150美元买一台闪存播放器，它也能容纳10~15首歌曲，也就是10美元一首歌。你还可以买一台兼容mp3格式的CD播放器，价格大概是150美元，可以容纳150首歌。相当于每首歌1美元。或者你可以花300美元买一台带有硬盘驱动的Jukebox播放器，它能装下1000首歌，相当于每首歌花30美分。我们研究了所有这些设备，这就是我们想要开拓的领域，我们今天要推出一款产品，这款产品叫做iPod。ipod的最大特点是能够存储1 000首歌。
+
+回想一下，以前mp3厂商是怎样宣传mp3的？是不是都是宣称自己的mp3多少多少M，多少多少G！你觉得哪种描述方式更能打动你？
+
+其实除了打动人！具体化数字还能**忽悠人**！
+
+大家应该都听说过kindle吧？kindle是Amazon发布的电子书阅读器。你看Amazon对其的介绍：“Kindle Paperwhite拥有**超长的续航能力**，在一次充电后，以每天阅读半小时计算，可以使用**数周之久**！”你的第一印象是不是Kindle的续航能力很牛逼？但是你计算下看看，以最长的4周计算，每天半小时，**续航也就15小时而已**！！！
+
+# 类比
+
+在讲述别人不熟悉的内容时，**类比** 是很好的讲述方法！还是举我已经举过很多次的例子：“**元xx**”！比如“元编程”，“元认知”等等！
+
+我们知道3D打印机可以打印桌子、花瓶，甚至手枪，而有一种3D打印机，它可以打印出3D打印机，这个3D打印机就是“**元3D打印机**”！
+
+---
+
+说了这么多废话，不知各位有没有体会？其实最切身的体会就是自己去做一场演讲！**知行和一**就是说**知道做不到，等于不知道！**
 
 # 参考资料
 
