--- a/source/_posts/private/2016年年终总结-王一帆.md
+++ b/source/_posts/private/2016年年终总结-王一帆.md
@@ -9,17 +9,58 @@ published: false
 
 ---
 
+2016年主要做了四个项目！
+
 - Hydra项目
 - ffuse项目
 - JMH项目
 - 缓存项目
 
-# 目标
+# Hydra项目
 
-# 执行情况
+## 目标
 
-# 成绩
+提高服务化框架的使用便捷性，增加服务治理功能。降低业务部门使用服务化框架以及后期服务治理的难度和成本。提供服务的优雅启停功能，提高服务的可用性。
 
-# 问题
+## 执行情况
 
-# 成员
+## 成绩
+
+## 问题
+
+## 成员
+
+# ffuse项目
+## 目标
+
+## 执行情况
+
+## 成绩
+
+## 问题
+
+## 成员
+
+
+# JMH项目
+## 目标
+
+## 执行情况
+
+## 成绩
+
+## 问题
+
+## 成员
+
+
+# 缓存项目
+## 目标
+
+## 执行情况
+
+## 成绩
+
+## 问题
+
+## 成员
