--- a/source/_posts/private/2016年年终总结-王一帆.md
+++ b/source/_posts/private/2016年年终总结-王一帆.md
@@ -20,15 +20,34 @@ published: false
 
 ## 目标
 
-提高服务化框架的使用便捷性，增加服务治理功能。降低业务部门使用服务化框架以及后期服务治理的难度和成本。提供服务的优雅启停功能，提高服务的可用性。
+1.	降低使用Hydra框架开发服务的难度,提高服务开发效率
+2.	优化服务发布流程
+3.	提供完善的服务治理，方便运维
 
 ## 执行情况
 
+- [x] Hydra3整体架构设计及技术预研
+- [x] Hydra3客户端设计与开发及Hydra3管理中心页面设计
+- [x] Hydra3管理中心详细设计与前台编码以及Hydra3服务详细设计
+- [x] Hydra3服务开发及流程优化
+- [x] Hydra3联调测试及文档整理
+- [ ] FPay部署Hydra3 [进行中]
+- [ ] 百卓部署Hydra3 [进行中]
+- [ ] Hydra2维护 [进行中]
+
 ## 成绩
+
+1、老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率
+2、老版Hydra的发布流程与运维发布流程无法很好的结合
+3、老版Hydra缺少完善的服务治理
 
 ## 问题
 
 ## 成员
+
+- 丁国洋
+
+
 
 # ffuse项目
 ## 目标
