--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -36,7 +36,30 @@ published: false
 现在决定把重心放在微信公众号上！其实我14年就注册微信公众号了，但是当时只是作为wordpress的手机端！那时我写了个小程序绑定到了公众号上，通过用户信息返回相应的wordpress上的博文！但是考虑到用户使用习惯和趋势，所以决定以公众号为核心了，github只做备份网站使用，其他平台作为推广用，练练自己的运营能力！
 
 # 心路历程
-- 对写作的想法的改变
+
+一开始想写博客的原因很简单，「**好记性不如烂笔头**」!主要就是为了记录学习的内容，同时借助搜索功能可以很方便的查找！所以写的内容都是专业相关，且写的都是「如何做」！
+
+后来停了很长一段时间，除了上面说的iteye被收购！还有一个原因就是自己不再愿意写「如何做」了！「如何做」的文章网上有很多，我把别人写的文章搜集过来就行了，何必自己再写呢？不划算！其二，我更想写的是「为什么这么做」以及「这么做的优缺点」！但是一直都没敢写！
+
+首先，就是受到十几年教育的影响！中国教育都有个「标准答案」！数理化还好说，有详细的推理或实验结果来支撑，所以我能hold住！而对语文来说，就完全看悟性了。而我就是悟性很差的那个！对于「请阅读如下文字，描述作者当时的感受」这样的问题，我的实际答案都是「我TM怎么知道？你自己问他去啊」！所以对于个人想法这种东西，我一般不会发表，因为按照我在语文上的经验来看，我的答案都是错的！
+
+其次，个人不喜欢争论！对于论坛上的那种论战，我一般都避而远之。我觉得争论又耗时间精力，又没什么意义！赢了又如何？又没人给你钱！输了又如何？又不少块肉！而且这种争论最后可能会演变成人生攻击！
+
+最后，就是比较在意别人的看法！别人赞了会高兴，别人骂了会郁闷！自己的情绪受别人的言论影响很大！
+
+上面的想法发生改变，源自两年多前的一场病！在家休息了一个多月！期间一直在思考、反思这些问题！感觉自己这么多年做的事不少，但是感觉不到相应的成长！
+
+- 《哲学家们都干了些什么》：这本书是凑单的时候买的！谁知道对我产生了比较大的影响！一个是消除了以前对哲学的误解，以为哲学就是「马克思主义哲学」！二是接受辩论，不是争论。「思想越辩越明」！第三就是，对思维方式的影响，思考多维度的！这个
+
+- 记录学习经历
+- how,what->why,problom
+
+
+「」
+受课本的影响。
+其他影响：《哲学家们都干了些什么》，《最好的告别》，《奇葩说》
+“小孩子才分对错，成年人只看利弊”
+
 # 写作需求
 - 对写作的需求
 # 写作工具
