--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -39,26 +39,23 @@ published: false
 
 一开始想写博客的原因很简单，「**好记性不如烂笔头**」!主要就是为了记录学习的内容，同时借助搜索功能可以很方便的查找！所以写的内容都是专业相关，且写的都是「如何做」！
 
-后来停了很长一段时间，除了上面说的iteye被收购！还有一个原因就是自己不再愿意写「如何做」了！「如何做」的文章网上有很多，我把别人写的文章搜集过来就行了，何必自己再写呢？不划算！其二，我更想写的是「为什么这么做」以及「这么做的优缺点」！但是一直都没敢写！
+后来停了很长一段时间，除了上面说的iteye被收购！还有一个原因就是自己不再愿意写「如何做」了！「如何做」的文章网上有很多，我把别人写的文章搜集过来就行了，何必自己再造轮子呢？不划算！其二，我更想写的是「为什么这么做」以及「这么做的优缺点」！但是一直都没敢写！因为有几点顾虑：
 
-首先，就是受到十几年教育的影响！中国教育都有个「标准答案」！数理化还好说，有详细的推理或实验结果来支撑，所以我能hold住！而对语文来说，就完全看悟性了。而我就是悟性很差的那个！对于「请阅读如下文字，描述作者当时的感受」这样的问题，我的实际答案都是「我TM怎么知道？你自己问他去啊」！所以对于个人想法这种东西，我一般不会发表，因为按照我在语文上的经验来看，我的答案都是错的！
+首先，就是受到十几年教育的影响！中国教育都有个「标准答案」！数理化还好说，有详细的推理或实验结果来支撑，所以我能hold住！而对语文来说，就完全看悟性了。而我就是悟性很差的那个！对于「请阅读如下文字，描述作者当时的感受」这样的问题，我的实际答案都是「我TM怎么知道？你自己问他去啊」！所以对于个人想法这种东西，我一般不会发表，因为按照我在语文上的经验来看，我的答案90%以上都是错的！
 
 其次，个人不喜欢争论！对于论坛上的那种论战，我一般都避而远之。我觉得争论又耗时间精力，又没什么意义！赢了又如何？又没人给你钱！输了又如何？又不少块肉！而且这种争论最后可能会演变成人生攻击！
 
-最后，就是比较在意别人的看法！别人赞了会高兴，别人骂了会郁闷！自己的情绪受别人的言论影响很大！
+最后，不争论的另一个原因就是我比较在意别人的看法！别人赞同了会高兴，别人骂了会郁闷！自己的情绪受别人的言论影响很大！其实说白了就是脸皮太薄！！！
 
-上面的想法发生改变，源自两年多前的一场病！在家休息了一个多月！期间一直在思考、反思这些问题！感觉自己这么多年做的事不少，但是感觉不到相应的成长！
+上面的想法发生改变，源自两年多前的一场病！在家休息了一个多月！才有时间思考、反思这些问题！自己这么多年做的事不少，但是感觉不到相应的成长！觉得主要原因还是缺乏独立思考！所以放开了自己对技术的限制，扩大了知识范围，找寻训练思维的方法！收获颇多！思维方式也有了很大的改变！
 
-- 《哲学家们都干了些什么》：这本书是凑单的时候买的！谁知道对我产生了比较大的影响！一个是消除了以前对哲学的误解，以为哲学就是「马克思主义哲学」！二是接受辩论，不是争论。「思想越辩越明」！第三就是，对思维方式的影响，思考多维度的！这个
+其实没有所谓的「**标准答案**」！对某件事、某个技术的某个看法，是由你当前所拥有的知识、经历以及看问题的方式、层面和纬度所决定的！你现在认为这样是对的，可能以后就认为是错的了！在互联网上你看到很多打「教科书」脸的内容、很多打脸的专家！**你所认为的「对」，可能是别人眼里的「错」**！但是没关系，你只要能给出充足的理由和证据来支撑你的观点就可以了！别人不赞同，请其说出不赞同的理由，单纯的否定没有任何意义！「**思想越辩越明**」！当你再次看到你以前的观点时，觉得它是如此的荒诞，并能以你现在的学识轻易的辩驳，那说明你成长了！
 
-- 记录学习经历
-- how,what->why,problom
+「**小孩子才分对错，成年人只论高下**」!这句话第一次听说应该是在韩寒的《后会无期》里，原话是「小孩子才分对错，成年人只看利弊」；「小孩子才分对错，成年人只论高下」这句是听罗振宇说的，我更偏向这一句！没有所谓的**绝对的对错**,只有特定场景下的适用性。牛顿力学也只适用于普通环境下，量子物理下牛顿力学并不适用！
 
+既然没有所谓的「对错」!那就没必要在意别人的单纯的赞同与否定了！关注别人赞同或否定你的**理由和证据**！如果理由充分，则吸收为己用，完善自己的认知；如果理由偏执或错误，可以忽略！
 
-「」
-受课本的影响。
-其他影响：《哲学家们都干了些什么》，《最好的告别》，《奇葩说》
-“小孩子才分对错，成年人只看利弊”
+最后，没必要讨好所有人，你也做不到！你又不是人民币！！!结识愿意和你讨论并交换意见的朋友，共同成长！自动屏蔽无理取闹、博眼球的人和言论！
 
 # 写作需求
 - 对写作的需求
