--- a/source/_posts/private/2016年年终总结-王一帆.md
+++ b/source/_posts/private/2016年年终总结-王一帆.md
@@ -37,49 +37,57 @@ published: false
 
 ## 成绩
 
-1、老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率
-2、老版Hydra的发布流程与运维发布流程无法很好的结合
-3、老版Hydra缺少完善的服务治理
+1、老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率。在Hydra3中，摒弃了复杂的OSGi技术，并对技术细节进行了封装。在开发及部署上提高了易用性，初步得到了项目组的认可。
+2、老版Hydra的发布流程与运维发布流程无法很好的结合。Hydra3的部署结合UMC进行发布，实现界面操作即可完成发布流程，同时UMC提供了监控功能，能方便的对Hydra3进行服务调用、运行情况的监控与报警。
+3、老版Hydra缺少完善的服务治理。Hydra3提供了完善的服务治理功能，包括服务升降级、客户端管理、服务端管理、权重管理、执行队列管理等功能。
 
 ## 问题
 
-## 成员
-
-- 丁国洋
-
-
+1. 设计阶段缺少对实际使用情况的考虑，在后续实际使用过程中，又针对项目组反馈的问题做了调整
+2. Hydra3使用了Spring，对版本没有做隔离，项目组Spring版本只能跟Hydra3走，限制了一部分的灵活性
+3. 项目开发完成后，推广使用有较长的空档期
 
 # ffuse项目
+
 ## 目标
+
+实现日志信息能自动推送到消息队列中，将「拉日志」改成「推日志」！
 
 ## 执行情况
 
+1. 完成ffuse的架构设计
+2. 完成ffuse的代码开发
+
 ## 成绩
+
+日志分析通过tail将日志写到消息队列中，tail可能会出问题，导致日志无法写到消息队列中！使用ffuse通过用户空间的文件系统，当日志在写文件时，自动推送到消息队列中！
 
 ## 问题
 
-## 成员
-
+1. 在开发层面，ffuse使用C语言开发，学习、开发、调试都花了较多的时间
 
 # JMH项目
+
 ## 目标
 
+提供部门使用的公共的、便利的基准测试平台！
+
 ## 执行情况
+
+1. 完成基准测试平台的架构设计
 
 ## 成绩
 
 ## 问题
-
-## 成员
-
 
 # 缓存项目
+
 ## 目标
+
+提供公用的缓存平台！
 
 ## 执行情况
 
 ## 成绩
 
 ## 问题
-
-## 成员
