--- a/source/_posts/private/2016年年终总结-王一帆.md
+++ b/source/_posts/private/2016年年终总结-王一帆.md
@@ -14,15 +14,16 @@ published: false
 - Hydra项目
 - ffuse项目
 - JMH项目
-- 缓存项目
+- 参与缓存项目
 
 # Hydra项目
 
 ## 目标
 
-1.	降低使用Hydra框架开发服务的难度,提高服务开发效率
-2.	优化服务发布流程
-3.	提供完善的服务治理，方便运维
+-	降低使用Hydra框架开发服务的难度,提高服务开发效率
+-	优化服务发布流程
+-	提供完善的服务治理，方便运维
+- 替换掉OSGi
 
 ## 执行情况
 
@@ -55,8 +56,8 @@ published: false
 
 ## 执行情况
 
-1. 完成ffuse的架构设计
-2. 完成ffuse的代码开发
+- [x] 完成ffuse的架构设计
+- [x] 完成ffuse的代码开发
 
 ## 成绩
 
@@ -74,11 +75,11 @@ published: false
 
 ## 执行情况
 
-1. 完成基准测试平台的架构设计
+- [x] 完成基准测试平台的架构设计
 
 ## 成绩
 
-## 问题
+基于Hydra3开发，节省服务端的重新开发
 
 # 缓存项目
 
@@ -88,6 +89,12 @@ published: false
 
 ## 执行情况
 
-## 成绩
+- [x] 梳理现有分布式缓存(Codis)的实现
 
-## 问题
+# 个人成长与不足
+
+2016年主要锻炼自己架构能力！通过分布式服务框架Hydra、ffuse以及基准测试框架JMH架构设计的锻炼，架构能力有了一定程度的提升，也对架构设计有了新的认识！
+
+架构设计是在限定的上下文下，做出最适合的决策的过程，决策的结果就是一个个的子系统、组件及接口！与「程序员思维」不同的是，对于某个问题，「程序员思维」选择的是最短路径！架构设计选择的是最优路径！
+
+演讲方面，经过五年的锻炼，对内部分享、培训等场合已经没什么大问题了！今年参加了公司的技术大会！整个体验和内部分享和培训完全不同，这方面的经验还很不足，需要进一步的学习与练习！
