--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -58,8 +58,71 @@ published: false
 最后，没必要讨好所有人，你也做不到！你又不是人民币！！!结识愿意和你讨论并交换意见的朋友，共同成长！自动屏蔽无理取闹、博眼球的人和言论！
 
 # 写作需求
-- 对写作的需求
+
+我现在写作的主要目的是「整理思路」！不仅仅是因为「好记性不如烂笔头」，还为了能使自己的思路更加的清晰且**结构化**，而不是一个个孤立的点！之前我写博客的方式，只是单纯的记录了自己做了什么、学了什么，而没有思考它们之间的联系，所以博客本身就是一篇篇孤立的文章，导致这些知识在自己的脑子里也是一个个孤立的存在，不能进行融合！现在就是想通过写作将一个个孤立的知识点串联起来，形成自己的知识体系！这也是我下周确定的主题《算法、数据结构与思维方式》！
+
+所以我的**目标读者是我自己**！当然**非常欢迎各位朋友拍砖、指教**！
+
+程序员其实是一群很懒的家伙，费尽心思的「偷懒」！软件开发里有个原则叫「DRY原则」，Don't repeat yourself！直译过来就是「不要重复你自己」，其实就是说「不要做重复劳动」！主要是为了避免相同的代码存在多个地方，需要多处修改的问题。比如说，你有类似的代码：
+
+```go
+//fileA
+func prt(name){
+  fmt.print("Hello ${name}")
+}
+prt("Ivan")
+
+//fileB
+func prt(name){
+  fmt.print("Hello ${name}")
+}
+prt("IvanEye")
+```
+
+如果你现在要把"Hello"改成"Hi"，那你需要改两个地方！而如果改成下面这样的结构的话，只需要改一个地方就可以了！
+
+```go
+//fileC
+func prt(name){
+  fmt.print("Hello ${name}")
+}
+//file
+import "fileC"
+
+prt("Ivan")
+
+//fileB
+import "fileC"
+
+prt("IvanEye")
+```
+
+写作上也一样，我**不希望同样的文字写多次**！比如有个内容，我想写成博客，又想做PPT演示，还想要word文档和pdf文档。我不希望相同的内容拷贝到四个地方！如果后面有修改了(这是肯定的)，我就需要改四个地方，原来只需要1分钟就能做完的事情，现在就需要4分钟！很浪费时间，而且万一哪里忘记修改了，那么就会使得四个地方的数据不同步了！
+
+既然是「整理思路」，那么我不希望「整理思路」之外的东西来影响我，比如样式、字体、布局之类的！我希望能**专注于内容**！样式这些东西通过程序自己去生成就可以了！而且我是个喜新厌旧的人，相同的样式我看一段时间就看腻了，就想换。所以样式、字体什么的要能方便的替换！
+
+虽然我是搞互联网的，但是就目前国内的网速来说，在线编辑的体验还是远不如本地编辑！万一网络出现了点问题，导致书写出现卡顿的情况，是很影响写作心情的！同时，文件存在本地，比较安心！所以目前为止我还是很偏向于本地编辑！同时为了保存文字历史以及备份，需要版本管理工具来管理文字版本，方便文字的保存和版本的召回！
+
+我笔记本是Linux系统，公司是Windows系统，所以我希望能在所有操作系统上进行写作，且有相同的写作体验！即使我现在使用相同的系统，我也会搭建系统无关的写作环境，因为我不能保证以后不换操作系统！万一以后一心动，换了Mac呢？如果写作环境是系统无关的，那换了系统，我也不需要花时间去找替代工具，直接部署现有的写作环境，就可以得到完全一样的写作体验了！找替代工具是一件很花时间的事情，找到后还需要改变以前已经习惯的操作方式，去习惯新工具的操作方式！不但学习新工具需要时间，也浪费了之前学习老工具所花费的「沉没成本」！
+
 # 写作工具
-- 工具的考量
+
+基于上面的需求，我对工具就有了如下要求：
+
+- 跨平台
+- 简单
+- 专注于内容
+- 本地存储
+- 版本管理
+
 # 写作方式
+
 - 如何进行写作，每周一个主题，周一至周五每天1000+，周六梳理上周文章，周日确定下周主题。写作内容
+
+- 《算法、数据结构与思维方式》
+- 《协议与沟通》
+- 《设计原则与人生原则》
+- 《时间报表》
+- 《软件架构与组织架构》
+- 《编程语言框架》
+- 《Web的本质:当你访问公众号的时候实际上做了什么》
