--- a/source/_posts/private/2016年年终总结-王一帆.md
+++ b/source/_posts/private/2016年年终总结-王一帆.md
@@ -9,14 +9,14 @@ published: false
 
 ---
 
-2016年主要做了四个项目！
+2016年主要做了四个项目:
 
-- Hydra项目
+- 分布式服务项目「Hydra」
 - ffuse项目
-- JMH项目
-- 参与缓存项目
+- 基准测试项目「JMH」
+- 参与分布式缓存项目
 
-# Hydra项目
+# 分布式服务项目「Hydra」
 
 ## 目标
 
@@ -38,9 +38,9 @@ published: false
 
 ## 成绩
 
-1、老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率。在Hydra3中，摒弃了复杂的OSGi技术，并对技术细节进行了封装。在开发及部署上提高了易用性，初步得到了项目组的认可。
-2、老版Hydra的发布流程与运维发布流程无法很好的结合。Hydra3的部署结合UMC进行发布，实现界面操作即可完成发布流程，同时UMC提供了监控功能，能方便的对Hydra3进行服务调用、运行情况的监控与报警。
-3、老版Hydra缺少完善的服务治理。Hydra3提供了完善的服务治理功能，包括服务升降级、客户端管理、服务端管理、权重管理、执行队列管理等功能。
+- 老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率。复杂的主要原因是项目组开发人员需要关注OSGi的相关配置，比如模块的导入导出，且相关配置需要在运行时才会提示是否有错误！在Hydra3中，摒弃了复杂的OSGi技术，并对技术细节进行了封装，实现了本地测试、debug和远程debug功能，极大的提高了开发效率。且在部署上提高了易用性，初步得到了项目组的认可。
+- 老版Hydra的发布流程与运维发布流程无法很好的结合，老版Hydra默认基于命令行的发布方式，而运维通常使用shell拷贝方式进行方法，OSGi需要通过设置优先级来判断bundle的启动顺序，运维的拷贝方式无法进行优先级设置，可能导致bundle启动顺序错乱的问题。Hydra3的部署结合UMC进行发布，实现界面操作即可完成发布流程，同时UMC提供了监控功能，能方便的对Hydra3进行服务调用、运行情况的监控与报警。
+- 老版Hydra缺少完善的服务治理，老版Hydra只有服务查看功能，而没有治理功能。Hydra3提供了完善的服务治理功能，包括服务升降级、客户端管理、服务端管理、权重管理、执行队列管理等功能。
 
 ## 问题
 
@@ -58,14 +58,17 @@ published: false
 
 - [x] 完成ffuse的架构设计
 - [x] 完成ffuse的代码开发
+- [ ] ffuse整体功能测试
+- [ ] ffuse整体性能测试
+- [ ] ffuse打包部署
 
 ## 成绩
 
-日志分析通过tail将日志写到消息队列中，tail可能会出问题，导致日志无法写到消息队列中！使用ffuse通过用户空间的文件系统，当日志在写文件时，自动推送到消息队列中！
+目前日志分析平台通过tail的方式将日志写到消息队列中！而tail可能会失败，当失败后没有很好的恢复机制，导致最终消费端日志与实际日志不同步！使用ffuse通过用户空间的文件系统来替代tail的方式，当应用向文件中写日志时，自动触发推送消息队列功能，将日志信息自动推送到消息队列中！当消息队列出现问题时，可暂时将日志信息缓存，待消息队列恢复后，自动再将日志信息推送过去。保证本地日志信息与消费端日志信息同步！
 
 ## 问题
 
-1. 在开发层面，ffuse使用C语言开发，学习、开发、调试都花了较多的时间
+- 在开发层面，ffuse使用C语言开发，学习、开发、调试都花了较多的时间
 
 # JMH项目
 
@@ -76,10 +79,15 @@ published: false
 ## 执行情况
 
 - [x] 完成基准测试平台的架构设计
+- [ ] 完成基准测试平台的原型及流程设计
+- [ ] 搭建开发框架
+- [ ] 完成基准测试平台的开发
+- [ ] 完成基准测试平台的测试
+- [ ] 完成基准测试平台的部署
 
 ## 成绩
 
-基于Hydra3开发，节省服务端的重新开发
+基于Hydra3开发，直接复用Hydra3的节点功能，节省服务端的开发
 
 # 缓存项目
 
