--- a/source/_posts/think/2015-12-13-my-writer.md
+++ b/source/_posts/think/2015-12-13-my-writer.md
@@ -126,10 +126,55 @@ prt("IvanEye")
 基于上面的需求，我对工具就有了如下要求：
 
 - 跨平台
-- 简单
+- 多文件内容检索
+- 易于使用
 - 专注于内容
 - 本地存储
 - 版本管理
+
+以前上大学的时候就喜欢捣鼓软件，装了卸、卸了再装，花了很长时间折腾工具，对大部分的相关工具都了解一点，所以现在选工具相对容易一点！
+
+基本上有如下候选项：
+
+- 编辑工具：Atom,SublimeText,Emacs,Vim,印象笔记,有道云笔记，简书,UtralEdit,EditPlus,Notepad++,OneNote,Office...
+- 文件格式：Markdown,org-mode,富文本(OneNote,word,印象笔记,有道云笔记...)
+- 类型转换：Markdown here,Atom插件,Chrome,pandoc,nodePPT,OneNote,word,印象笔记,有道云笔记
+- 版本管理：github,印象笔记,有道云笔记，简书
+
+这个列表可以很长！考虑到我的需求，最终我选择的工具如下：
+
+- 编辑工具：Atom
+- 文件格式：Markdown
+- 类型转换：Markdown here,Atom插件,Chrome,pandoc,nodePPT
+- 版本管理：github
+
+## Atom
+
+Atom是github发布的文本编辑工具，是基于NodeJs+Chromium开发的本地编辑器！选择Atom的原因是跨平台，多文件内容检索，易于使用，本地存储！它的缺点就是启动速度慢！这点SublimeText要优于Atom，而最终选择Atom的原因就是，首先，SublimeText是要收费的，当然不付钱也能用，但是保存的时候随机弹出付费提示框，严重影响心情！其次，Atom是社区维护，比小团体维护要好很多，人多力量大嘛！
+
+Atom是默认支持Markdown的，支持Preview，不过默认不会同步滚动，需要安装markdown-scroll-sync插件！通过调整style.less文件，可以修改Preview的样式，可以使得Preview所看到的样式和最终发布的样式相同！
+
+## Markdown
+
+选择Markdown作为写作格式的原因是足够简单，能专注于内容，而不用关心格式！以前折腾过Emacs的org-mode，功能比Markdown强大很多，也复杂很多，同时它只能在Emacs里面使用！Emacs是个古老的编辑器，很牛逼，但是学习成本非常的高！如果时间有限，不建议使用！
+
+选择Markdown的另一个原因就是受众较广，当然是相对的！还是有很多人没听过Markdown！不过普及度越来越高，很多工具都支持Markdown了，比如锤子便签，有道云笔记，为知笔记，简书等等！而且有很多的工具可以将Markdown转化为其它格式！对细节没有太多要求的情况下，转换后的文档不需要做任何修改，就可以做最终版本！
+
+## 类型转换
+
+Atom就提供了将Markdown转换为pdf、jpg、png的插件---markdown-pdf！生成结果与预览效果一模一样！
+
+Chrome里有个叫Markdown here的插件，可以将富文本框中的markdown内容转换成HTML，我的公众号就是通过此插件进行编排的！只要把Markdown here的样式配成和Atom预览一样的样式，那么预览结果和最终发布公众号的结果就一模一样了！同时，Chrome可以将内容打印为pdf！
+
+如果想转换成ppt，可以通过nodePPT或者pandoc来进行转换，nodePPT需要一点特殊语法，pandoc可以直接转换！有兴趣的可以去google下！
+
+特别说一下pandoc，pandoc是个很牛逼的转换工具！可以几十种格式之间互转，非常的方便！向有转换需求的朋友强烈推荐！
+
+## Github
+
+版本管理就不用说了，现在最火的就是github了！相对于简书那种历史记录来说，Github记录了从文件创建开始，到目前所有的版本，你想回到那个版本都可以！所以我可以放心的写，想怎么写就怎么写，反正不行就回滚嘛！
+
+最后，最重要的一点！**不要被工具绑架!不要被工具绑架!不要被工具绑架**!重要的事情要说三遍！要「思考你要什么，而不是工具有什么」！
 
 # 写作方式
 
